package es.etg.daw.prog.mercadaw.model.util.reader;

public enum Formato {
    CSV, JSON
}
