@startuml reader

set separator none
package es.etg.daw.prog.mercadaw.model.util.reader{
    
    enum Formato{
        CSV, JSON, MOCK
    }

    class LectorCSV{

    }

    class LectorJSON{

    }


    class LectorMock{

    }

    abstract LectorImp{
        
    }

    interface Lector{
        + leerProducto(codigo: String): List<Producto>
        + leerEmpleado(codigo: String): List<Empleado>
        + leerCliente(codigo: String): List<Producto>
        + leerCompra(codigo: String): List<Compra>
    }


    class LectorFactory{
        + {static} obtener(f:Formato):Lector
    }



}
LectorImp <|-- LectorCSV
LectorImp <|-- LectorJSON
LectorImp ..|> Lector
LectorMock ..|> Lector
@enduml